--- a/package.json
+++ b/package.json
@@ -5,18 +5,24 @@
    "type": "commonjs",
    "devDependencies": {
       "@types/node": "^16.11.10",
+      "@typescript-eslint/eslint-plugin": "^5.61.0",
+      "@typescript-eslint/parser": "^5.61.0",
+      "eslint": "^8.44.0",
       "ts-node": "10.7.0",
       "typescript": "4.5.2"
    },
    "dependencies": {
       "@types/express": "^4.17.17",
       "express": "^4.18.2",
+      "jsonwebtoken": "^9.0.0",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
       "typeorm": "0.3.17"
    },
    "scripts": {
       "start": "ts-node src/index.ts",
-      "typeorm": "typeorm-ts-node-commonjs"
+      "typeorm": "typeorm-ts-node-commonjs",
+      "lint": "eslint src/",
+      "lint-fix":"eslint --fix src/"
    }
 }
