--- a/package.json
+++ b/package.json
@@ -4,25 +4,34 @@
    "description": "Awesome project developed with TypeORM.",
    "type": "commonjs",
    "devDependencies": {
+      "@types/jest": "^29.5.2",
       "@types/node": "^16.11.10",
+      "@types/supertest": "^2.0.12",
       "@typescript-eslint/eslint-plugin": "^5.61.0",
       "@typescript-eslint/parser": "^5.61.0",
       "eslint": "^8.44.0",
+      "jest": "^29.5.0",
+      "nodemon": "^2.0.22",
+      "supertest": "^6.3.3",
+      "ts-jest": "^29.1.1",
       "ts-node": "10.7.0",
       "typescript": "4.5.2"
    },
    "dependencies": {
       "@types/express": "^4.17.17",
+      "dotenv": "^16.3.1",
       "express": "^4.18.2",
       "jsonwebtoken": "^9.0.0",
+      "mocha": "^10.2.0",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
       "typeorm": "0.3.17"
    },
    "scripts": {
-      "start": "ts-node src/index.ts",
+      "start": "nodemon src/index.ts",
       "typeorm": "typeorm-ts-node-commonjs",
       "lint": "eslint src/",
-      "lint-fix":"eslint --fix src/"
+      "lint-fix": "eslint --fix src/",
+      "test": "jest src/tests/users/create-user.test.ts"
    }
 }
