--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
       "start": "nodemon src/index.ts",
       "typeorm": "typeorm-ts-node-commonjs",
       "lint": "eslint src/",
-      "lint-fix": "eslint --fix src/",
+      "lint-fix": "eslint --fix src/ ./*.{ts,js}",
       "test": "jest src/tests/users/create-user.test.ts"
    }
 }
